# location_service

./: .gitignore  Makefile  README.md  main.py
app/: .env.example  docker-compose.yml
app/api/: Dockerfile  main.py  pyproject.toml
app/api/core/: distance_calculator.py  kalman_filter.py  location_calculator.py
app/subscriber/: Dockerfile  pyproject.toml  subscriber.py
backend/: pyproject.toml  subscriber.py
beacon/: main.py
bt_module/: adv_data_parser.py  lighthouse.py  scanner.py
lighthouse/: main.py
research/: clear_beats_rssi_reference.csv  neuro_visualisation.py  reference_rssi.py  rssi_reference.py  rssi_tralalelo.csv
scanner/: main.py
scanner/bt_module/: adv_data_parser.py  rssi_reference.py  scanner.py
scanner/bt_module/mqtt_module/: __init__.py  mqtt_client.py
scanner/wifi_module/: wifi.py
wifi_module/: wifi.py
