[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Tuammar"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "redis>=5.0.0,<6.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 